--- a/nextq/package.json
+++ b/nextq/package.json
@@ -24,13 +24,18 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "^1.13.2",
+    "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.2",
+    "react-native-toast-message": "^1.4.3",
+    "react-native-toasty": "^1.0.2",
     "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.3"
+    "react-navigation": "^4.4.3",
+    "react-toastify": "^7.0.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
